--- a/mern/client/public/index.html
+++ b/mern/client/public/index.html
@@ -4,10 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>MERN boilerplate</title>
-
-  <link rel="icon" type="image/png" href="/assets/img/logo.png">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
+  <title>Engagement Lab Lobby</title>
+	<link href="https://fonts.googleapis.com/css?family=Assistant" rel="stylesheet"> 
 </head>
 <body>
   <div id="root"></div>
